[package]
name = "timeable_nft_deposit"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = {version = "1.4.4", features = ["test-support"]}
casper-types = "1.5.0"
casper_types_derive = "0.1.0"

[[bin]]
name = "timeable_nft_deposit"
path = "src/main.rs"
bench = false
doctest = false
test = false